--- a/public/_monju/index.html
+++ b/public/_monju/index.html
@@ -34,24 +34,10 @@
 <link rel="stylesheet" href="css/slick01.css">
 <link rel="stylesheet" href="css/slick-theme01.css">
 <link rel="stylesheet" href="css/slick_style03.css">
-
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WTB2VRX');</script>
-<!-- End Google Tag Manager -->
-
-<script async src="https://tripla.jp/sdk/javascript/tripla.min.js" data-triplabot-code="6b38562f-fea6-4160-967f-e6af353c1946"></script>
-
 </head>
 <body>
 <!-- Menu updated: 2025-10-09 -->
 
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTB2VRX"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- ボタン ------------>
 <div class="reser01"><a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
@@ -128,42 +114,6 @@
 </div>
 </div>
 
-<!------ ぶらり丹後 ムービー ----------------------------------------------->
-
-<div class="section-block bkg-grey-ultralight">
-<div class="row">
-<div class="column width-4 horizon" data-animate-in="preset:slideInLeftShort;duration:3000ms;">
-<h2 class="ls02 f16 center_sp">施工紹介<br>現長の技術力</h2>
-<div class="allura f12 f_grn mb-10">Gencho Technical Skills</div>
-現長株式会社のシートシャッター施工技術をご紹介します。
-計画から施工、メンテナンスまで一貫したサービスで、お客様のニーズに最適なソリューションを提供いたします。
-</div>
-<div class="column width-8 horizon" data-animate-in="preset:slideInRightShort;duration:3000ms;">
-<iframe width="100%" height="400" src="https://www.youtube.com/embed/NaVomlSTH2o?si=KR6nHX0TwNtX87G9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-</div>
-</div>
-
-<!------ ぶらり丹後 ムービー ---------------------------------------------
-
-<div class="section-block bkg-grey-ultralight">
-<div class="row">
-<div class="column width-4 mb-30 horizon" data-animate-in="preset:slideInLeftShort;duration:3000ms;">
-<h2 class="ls02 f16 center_sp">天橋立ナイトイベント</h2>
-<div class="allura f12 f_grn mb-10">Amanohashidate Night Event</div>
-今年も天橋立のナイトイベントが開催されます。<br class="pc">
-動画はこれまでのイベントを撮影したものをまとめて制作されたイメージ動画です。<br class="pc">
-是非予定を合わせて、天橋立へお越しください！
-<div class="mb-20"></div>
-<a href="https://monjusou.com/info/113/?_gl=1*1u2u5l0*_gcl_au*MTQyNTEzMjcwNi4xNzQ0NTEwNzgx" class="button large1 bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
-</div>
-<div class="column width-8 horizon" data-animate-in="preset:slideInRightShort;duration:3000ms;">
-<iframe width="100%" height="400" src="https://www.youtube.com/embed/bK5DZR4d_XI?si=btqM9fGUlb9M8HRL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-</div>
-</div>
--->
-
 <!------ 02客室 ----------------------------------------------->
 
 <section class="section-block feature-2 right no-padding-bottom">
@@ -171,8 +121,8 @@
 <div class="column width-8">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="../img/top01.jpg"></div>
-<div class="sp"><img src="../img/top01_sp.jpg"></div>
+<div class="pc"><img src="../img/top01.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top01_sp.jpg" class="feature-img-small"></div>
 </div></div></div>
 <div class="column width-3 offset-1 tategaki02">
 <div class="feature-content">
@@ -195,8 +145,8 @@
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
 <div class="img-wrap1">
-<div class="pc"><img src="../img/top02.jpg"></div>
-<div class="sp"><img src="../img/top02_sp.jpg"></div>
+<div class="pc"><img src="../img/top02.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top02_sp.jpg" class="feature-img-small"></div>
 </div></div></div></div>
 <div class="column width-3 pull-9 tategaki02">
 <div class="feature-content">
@@ -218,8 +168,8 @@
 <div class="column width-8">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="../img/top03.jpg"></div>
-<div class="sp"><img src="../img/top03_sp.jpg"></div>
+<div class="pc"><img src="../img/top03.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top03_sp.jpg" class="feature-img-small"></div>
 </div></div></div>
 <div class="column width-3 offset-1 tategaki02">
 <div class="feature-content">
@@ -242,8 +192,8 @@
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
 <div class="img-wrap1">
-<div class="pc"><img src="../img/top04.jpg"></div>
-<div class="sp"><img src="../img/top04_sp.jpg"></div>
+<div class="pc"><img src="../img/top04.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top04_sp.jpg" class="feature-img-small"></div>
 </div></div></div></div>
 <div class="column width-3 pull-9 tategaki02">
 <div class="feature-content">
@@ -258,44 +208,6 @@
 </div></div></div></div>
 </section>
 
-
-<!------ 06映像 ----------------------------------------------->
-
-<section class="section-block featured-media">
-<div id="youtube-wrap">
-  <div id="youtube" data-property="{
-      videoURL: 'https://youtu.be/0hZyOKAsB5o',
-      containment: '#youtube-wrap',
-      autoPlay: true,
-      loop: 1,
-      mute: true,
-      startAt: 0,
-      opacity: 1,
-      ratio: 4/3,
-      showControls: false,
-      showYTLogo: false,
-      onReady: function( player ) {
-      $('.loading').hide('slow');
-      }
-  }"></div>
-<div class="row pt-150 pb-150">
-<div class="column width-5 center f_shadow horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;">
-<a href="https://www.youtube.com/embed/0hZyOKAsB5o?autoplay=1&amp;showinfo=0&amp;loop=1&playlist=0hZyOKAsB5o" data-lightbox-animation="fade" data-toolbar="zoom" class="icon-circled icon-play lightbox-link medium border-white bkg-hover-theme color-white color-hover-white text-uppercase"></a>
-<h3 class="f_wht mt-20 lh18">現長株式会社<br>企業紹介ムービー</h3>
-<p class="f_wht">シートシャッター専門施工会社として、計画から施工、メンテナンスまで一貫したサービスを提供。確かな技術と豊富な実績で、お客様のニーズに最適なソリューションをお届けします。</p>
-</div></div></div></div>
-</div>
-</section>
-
-<!------ 07ケーキ ----------------------------------------------->
-
-<section class="section-block pb-0">
-<div class="row flex horizon" data-animate-in="preset:slideInRightShort;duration:1800ms;" data-threshold="0.3">
-<div class="column width-10 offset-1 mb-20">
-<div class="pc"><a href="https://cake.jp/inn/cart/monjusou/?r=1" target="_blank"><img src="../img/01cake01.jpg" class="linkimg"></a></div>
-<div class="sp"><a href="https://cake.jp/inn/cart/monjusou/?r=1" target="_blank"><img src="../img/01cake01_sp.jpg" class="linkimg"></a></div>
-</div></div>
-</section>
 
 <!-- Signup Modal -->
 <div id="signup-lightbox" class="signup-1 pt-50 pb-40 hide">
@@ -365,149 +277,6 @@
 <a href="#"><span>▲</span></a>
 </p>
 
-
-<!------ ホテル詳細 ----------------------------------------------->
-
-<section class="section-block pb-20">
-
-<div class="row flex mb-40 horizon" data-animate-in="preset:slideInUpShort;duration:1800ms;" data-threshold="0.3">
-<div class="column width-12 mb-20">
-<div class="line02 f16 center ls22">現長株式会社 ご案内<br><span class="allura f_grn f09">Gencho Co., Ltd. Details</span></div>
-</div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon21.png"></div>
-<div class="cell">
-総客室数<br>
-29室
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon22.png"></div>
-<div class="cell">
-客室定員<br>
-2〜5名
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon24.png"></div>
-<div class="cell">
-サウナ<br>
-<a href="03spa/index.html" class="button small bkg-an01 bkg-hover-an01">> 詳細はこちら</a>
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon25.png"></div>
-<div class="cell">
-チェックイン / アウト<br>
-<div class="f08 lh08">3:00PM-10:00AM<br>
-(特別室は2:00PM-11:00AM)</div>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon26.png"></div>
-<div class="cell">
-Wi-Fi<br>
-全客室、共用エリア（無料）
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon27.png"></div>
-<div class="cell">
-こども添い寝<br>
-可<br>
-<a href="08qa/index.html#child" class="button small bkg-an01 bkg-hover-an01">> 詳細はこちら</a>
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon28.png"></div>
-<div class="cell">
-ペット受け入れ<br>
-不可
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon29.png"></div>
-<div class="cell">
-記念日・お祝い
-<div class="f08 lh08">→ ケーキの予約<br>
-<a href="https://cake.jp/inn/cart/monjusou/?r=1" target="_blank" class="button small bkg-an01 bkg-hover-an01">> ケーキオーダーからご注文</a></div>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon30.png"></div>
-<div class="cell">
-送迎<br>
-最寄り天橋立駅迄<br>
-事前予約制
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon31.png"></div>
-<div class="cell">
-駐車場<br>
-あり（無料）
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon32.png"></div>
-<div class="cell">
-EV充電<br>
-あり（2基）<br>
-<a href="08qa/index.html#ev" class="button small bkg-an01 bkg-hover-an01">> 詳細はこちら</a>
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon35.png"></div>
-<div class="cell">
-主要施設
-<div class="f08 lh08">ラウンジ／キッズルーム／温泉
-</div>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon33.png"></div>
-<div class="cell">
-事前払い<br>
-<div class="f08 lh08">Visa、Mastercard、American Express、Diners Club、JCB、ペイディ</div>
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon33.png"></div>
-<div class="cell">
-現地払い<br>
-<div class="f08 lh08">現金、クレジットカード（銀聯 UnionPay含む）、電子マネー、QRコード決済</div>
-</div></div></div>
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="../img/icon36.png"></div>
-<div class="cell">
-その他<br>
-<div class="f08 lh08">宅配｜チェックイン日、宿泊代表者名を明記ください
-</div>
-</div></div></div>
-
-</div>
-
-<div class="row center">
-<div class="column width-6 offset-3 mt-20">
-<div class="top_logo02"><a href="./"><img src="img/logo_blk03_new.png" class="linkimg"></a></div>
-<div class="mt-10">〒550-0013 大阪府大阪市西区新町1-1-26　TEL：06-6585-9068　FAX：06-6585-9071</div>
-<div class="mt-20">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f14"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f14"></span></a>
-</div>
-</div>
-<div class="column width-2 offset-1 mt-70">
-<a href="https://en-gage.net/gencho/" target="_blank" class="button medium1 bkg-btn01 bkg-hover-btn01">>　求人情報</a>
-</div>
-</div>
-
-</section>
 
 <!------ Footer ----------------------------------------------->
 
